# regex-llm

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
regex_llm/: __init__.py
