[tool.poetry]
name = "regex-llm"
version = "0.1.0"
description = "Controlled language model generation using regex"
authors = ["yanyongyu <yyy@yyydl.top>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yanyongyu/regex-llm"
repository = "https://github.com/yanyongyu/regex-llm"
documentation = "https://github.com/yanyongyu/regex-llm"
keywords = ["llm", "regex", "language model", "generation"]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2023.5.5"
transformers = "^4.29.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^23.1.0"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
